<resources>
    <string name="app_name">MoviNivel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <string name="title_activity_motorista">ActividadConductor</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Panel</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="hist_rico">Historial</string>
    <string name="ganhos_de_hoje">Ganancias de Hoy</string>
    <string name="concluidas">Concluidas</string>
    <string name="r_1_250_00">R$ 1.250,00</string>
    <string name="canceladas">Canceladas</string>
    <string name="ativas">Activas</string>
    <string name="you_are_top_10_today">Estás en el top 10% hoy</string>
    <string name="invitar_amigos">Invitar amigos</string>
    <string name="reembolso_autom_tico_en_todos_los_viajes_dentro_de_tu_red">Reembolso automático en todos los viajes dentro de tu red.</string>
    <string name="tu_ganas">Tú ganas</string>
    <string name="utilizan_tu_invitaci_n_al_crear_una_cuenta_en_la_aplicaci_n">Usan tu invitación al crear una cuenta en la aplicación.</string>
    <string name="registro_de_amigos">Registro de amigos</string>
    <string name="comparte_tu_c_digo_o_enlace_nico_con_tus_amigos">Comparte tu código o enlace único con tus amigos.</string>
    <string name="env_a_tu_c_digo">Envía tu código</string>
    <string name="op_es">Opciones</string>
    <string name="stories">Historias</string>
    <string name="telegram">Telegram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="copiar">Copiar</string>
    <string name="https_www_figma_com">https://www.figma.com/</string>
    <string name="enlace_de_referencia">Enlace de referencia</string>
    <string name="saldo_dispon_vel_para_saque">Saldo disponible para retiro</string>
    <string name="conta_verificada">Cuenta verificada</string>
    <string name="di_rio">Diario</string>
    <string name="semanal">Semanal</string>
    <string name="mensal">Mensual</string>
    <string name="detalhamento">Detalle</string>
    <string name="corridas">Carreras</string>
    <string name="cashback">Reembolso</string>
    <string name="_80_garantido">80% Garantizado</string>
    <string name="_5_bonus">5% Bono</string>
    <string name="atividades_recentes">Actividades recientes</string>
    <string name="ver_tudo">Ver todo</string>
    <string name="sacar_agora">Retirar ahora</string>
    <string name="meu_perfil">Mi perfil</string>
    <string name="jo_o_silva">Juan Silva</string>
    <string name="conta">Cuenta</string>
    <string name="dados_pessoais">Datos personales</string>
    <string name="nome_e_mail_e_telefone">Nombre, correo y teléfono</string>
    <string name="endere_os_salvos">Direcciones guardadas</string>
    <string name="casa_trabalho_e_favoritos">Casa, trabajo y favoritos</string>
    <string name="carteira_e_ganhos">Billetera y ganancias</string>
    <string name="m_todos_de_pagamento">Métodos de pago</string>
    <string name="indique_e_ganhe">Invita y gana</string>
    <string name="convide_amigos_para_sua_rede">Invita amigos a tu red</string>
    <string name="prefer_ncias">Preferencias</string>
    <string name="notifica_es">Notificaciones</string>
    <string name="privacidade_e_seguran_a">Privacidad y seguridad</string>
    <string name="ajuda_e_suporte">Ayuda y soporte</string>
    <string name="sair_da_conta">Cerrar sesión</string>
    <string name="retirar_ganancias">Retirar ganancias</string>
    <string name="quanto_voc_quer_sacar">¿Cuánto quieres retirar?</string>
    <string name="m_todo_de_recebimento">Método de recepción</string>
    <string name="transfer_ncia">Transferencia</string>
    <string name="at_2_dias_teis">Hasta 2 días hábiles</string>
    <string name="conta_de_destino">Cuenta de destino</string>
    <string name="conta_bancaria_para_ted">Cuenta bancaria para TED</string>
    <string name="_456_789">***.456.789-**</string>
    <string name="alterar">Cambiar</string>
    <string name="valor_total_a_receber">Valor total a recibir</string>
    <string name="confirmar_saque">Confirmar retiro</string>
</resources>
