<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.motorista.MotoristaPerfilFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meu_perfil"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <LinearLayout
            android:id="@+id/linlay_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="11dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="112dp"
                android:layout_height="112dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_login"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button"
                    android:scaleType="fitXY"/>
                <ImageView
                    android:id="@+id/btnCamera"
                    android:layout_width="41dp"
                    android:layout_height="41dp"
                    android:src="@drawable/ic_camera"
                    android:layout_gravity="bottom|end"/>

            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eduardo Jose"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="32sp"
                android:layout_marginTop="11dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conta"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/bg_card_raio_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="21dp"
                        android:src="@drawable/icbanco"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="11dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dados_pessoais"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nome_e_mail_e_telefone"
                            android:textSize="12sp"
                            android:textColor="#6B7280"/>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_ir"
                        android:layout_marginEnd="21dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/bg_card_raio_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="21dp"
                        android:src="@drawable/icbanco"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="11dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/endere_os_salvos"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/casa_trabalho_e_favoritos"
                            android:textSize="12sp"
                            android:textColor="#6B7280"/>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_ir"
                        android:layout_marginEnd="21dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carteira_e_ganhos"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/bg_card_raio_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="21dp"
                        android:src="@drawable/icbanco"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="11dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/m_todos_de_pagamento"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"/>


                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_ir"
                        android:layout_marginEnd="21dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/bg_card_raio_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="21dp"
                        android:src="@drawable/icbanco"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="11dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/indique_e_ganhe"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/convide_amigos_para_sua_rede"
                            android:textSize="12sp"
                            android:textColor="@color/Third"/>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_ir"
                        android:layout_marginEnd="21dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prefer_ncias"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/bg_card_raio_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="21dp"
                        android:src="@drawable/icbanco"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="11dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notifica_es"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"/>


                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_ir"
                        android:layout_marginEnd="21dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/bg_card_raio_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="21dp"
                        android:src="@drawable/icbanco"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="11dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/privacidade_e_seguran_a"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"/>


                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_ir"
                        android:layout_marginEnd="21dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/bg_card_raio_48"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="21dp"
                        android:src="@drawable/icbanco"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="11dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ajuda_e_suporte"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"/>


                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_ir"
                        android:layout_marginEnd="21dp"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSair"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="31dp"
                    android:textStyle="bold"
                    android:text="@string/sair_da_conta"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginBottom="21dp"
                    android:background="@drawable/bg_buttom_gren_terty"
                    android:backgroundTint="#30CC0000"/>






            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>